--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -622,7 +622,7 @@ ExternalImagePicker.TimeStamp=2018.06.26-15.55.42
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -865,6 +865,21 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -925,5 +940,9 @@ MeshImportExport=../../../../../../Users/Ricin/source/repos/BuildingEscape/Conte
 WorldRoot=../../../../../../Users/Ricin/source/repos/BuildingEscape/Content/
 Level=../../../../../../Users/Ricin/source/repos/BuildingEscape/Content
 Project=C:/Program Files/Epic Games/UE_4.19/
+
+[PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 
 
