--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -942,6 +942,7 @@ Level=../../../../../../Users/Ricin/source/repos/BuildingEscape/Content
 Project=C:/Program Files/Epic Games/UE_4.19/
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 
