--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=919464674687A6082488A8984B9ABD21
+CompanyName=Glen Buxton
+CompanyDistinguishedName=NA
+SupportContact=glen.buxton@gmail.com
+CopyrightNotice=Copyright Glen Buxton 2018
 
 [StartupActions]
 bAddPacks=True
