--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -36,8 +36,8 @@ LastExecutedPIEPreviewDevice=
 LastLevel=/Game/StarterMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.18-13.29.52
-BuildingEscape.LastCompileMethod=Unknown
+BuildingEscape.TimeStamp=2018.07.18-15.43.06
+BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.06.26-15.55.59
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.06.26-15.56.05
@@ -622,7 +622,7 @@ ExternalImagePicker.TimeStamp=2018.06.26-15.55.42
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -896,7 +896,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
