Print pos to console

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,8 +26,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-69PKC0L
 LastExecutedLaunchName=DESKTOP-69PKC0L
 LastExecutedPIEPreviewDevice=
@@ -36,7 +36,7 @@ LastExecutedPIEPreviewDevice=
 LastLevel=/Game/StarterMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.18-15.43.06
+BuildingEscape.TimeStamp=2018.07.18-22.40.13
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.06.26-15.55.59
 PakFile.LastCompileMethod=Unknown
@@ -622,7 +622,7 @@ ExternalImagePicker.TimeStamp=2018.06.26-15.55.42
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -880,6 +880,10 @@ BP_Sky_Sphere_C.Override settings=True
 BP_Sky_Sphere_C.Rendering=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+MapBuildDataRegistry.Lighting=True
+PositionReporter.Tags=False
+PositionReporter.Activation=False
+PositionReporter.Cooking=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -912,7 +916,7 @@ Object=
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -945,5 +949,8 @@ Project=C:/Program Files/Epic Games/UE_4.19/
 RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
+
+[AssetEditorToolkitTabLocation]
+/Game/StarterMap_BuiltData.StarterMap_BuiltData=1
 
 
