--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -36,7 +36,7 @@ LastExecutedPIEPreviewDevice=
 LastLevel=/Game/StarterMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.19-18.25.38
+BuildingEscape.TimeStamp=2018.07.19-21.23.53
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.06.26-15.55.59
 PakFile.LastCompileMethod=Unknown
@@ -935,6 +935,50 @@ TriggerVolume.Tags=True
 TriggerVolume.Cooking=True
 TriggerVolume.BrushSettings=True
 TriggerVolume.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+DefaultPawn.TransformCommon=True
+DefaultPawn.StaticMesh=True
+DefaultPawn.Materials=True
+DefaultPawn.Pawn=True
+DefaultPawn.FloatingPawnMovement=True
+DefaultPawn.NavMovement=True
+DefaultPawn.Physics=True
+DefaultPawn.Velocity=True
+DefaultPawn.PlanarMovement=True
+DefaultPawn.Collision=True
+DefaultPawn.Lighting=True
+DefaultPawn.MovementComponent=True
+DefaultPawn.Tags=True
+DefaultPawn.Rendering=True
+DefaultPawn.Activation=True
+DefaultPawn.Cooking=True
+DefaultPawn.Shape=True
+DefaultPawn.Navigation=True
+DefaultPawn.Camera=True
+DefaultPawn.Input=True
+DefaultPawn.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+TriggerVolume.Mobile=False
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1019,6 +1063,7 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 [AssetEditorToolkitTabLocation]
 /Game/StarterMap_BuiltData.StarterMap_BuiltData=1
 /Game/StarterContent/Props/Materials/M_Chair.M_Chair=1
+/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1034,5 +1079,67 @@ PrimType=1
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[DetailCustomWidgetExpansion]
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EndUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+OculusHMDRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+
+[PluginBrowser]
+InstalledPlugins=MidiAsset
 
 
