--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StarterMap.StarterMap
 GameDefaultMap=/Game/StarterMap.StarterMap
-GlobalDefaultGameMode=/Script/BuildingEscape.BuildingEscapeGameModeBase
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
